# ef

./: .gitignore  Cargo.toml  README.md  demo.tape  todo.md
.cargo/: config.toml
src/: app.rs  apps.rs  cli.rs  commands.rs  errors.rs  file_ops.rs  logging.rs  main.rs  tui.rs  ui.rs
src/app/: app.rs  components.rs  config.rs  events.rs  message.rs  mod.rs
src/core/: _app.rs  _events.rs  _model.rs  cmd.rs  config.rs  context.rs  file_ops.rs  mod.rs  msg.rs  runner.rs  traits.rs
src/core/fop/: rename.rs
src/core/model/: checker.rs  component.rs  home.rs  mod.rs  models.rs  processor.rs  selector.rs
src/core/model/component/: fps.rs  input.rs  popup.rs
src/core/service/: listener.rs  mod.rs  servicer.rs  tasks.rs  watcher.rs
src/core/services/: listener.rs  mod.rs  servicer.rs  source.rs  tasks.rs  ticker.rs  watcher.rs
