[package]
name = "ef"
version = "0.1.0"
description = "The simplest way to sort your items."
edition = "2024"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.

[dependencies]
# clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29", features = [
    "serde",
    "event-stream",
    "bracketed-paste",
] }
directories = "6.0.0"
env_logger = "0.11.8"
lazy_static = "1.5.0"
log = "0.4.29"
# directories = "6.0.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
ratatui = { version = "0.30.0-alpha", features = ["serde", "macros"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# serde = { version = "1.0.228", features = ["derive"] }
# serde_derive = "1.0.228"
# toml = "0.9.10"
uuid = { version = "1.19.0", features = ["v7"] }
time = { version = "0.3", features = ["macros", "local-offset", "formatting"] }
sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["full", "tracing"] }
dashmap = "6.1.0"
console-subscriber = "0.5.0"

[dev-dependencies]
env_logger = "0.11.8"


