[package]
name = "ef"
version = "0.1.0"
description = "The simplest way to sort your items."
edition = "2024"

[profile.dev]
# 1. 分离调试信息 (macOS/Linux 尤其有效)
# "unpacked" 避免了打包 debug info 的步骤，大幅减少 I/O 和时间
split-debuginfo = "unpacked"

# 2. 降低依赖的优化等级
# 你的代码可能需要调试，但依赖库通常不需要。
# 将依赖的优化等级设为 0 或 1，可以加快构建速度。
# opt-level = 0

# 3. 减少 Debug 信息量
# 默认是 2 (full)，改为 1 (line tables only) 或者 0 (none)。
# 对于 CLI 工具，通常只需要行号就能定位 panic。
debug = 1

# 4. 增量编译 (默认开启，确保没有被误关)
incremental = true

[profile.dev.package."*"]
# 强制所有依赖库进行最高级别的优化压缩（虽然第一次慢，但后续增量编译不需要重新编译依赖）
# 或者设为 0 以追求极致的编译速度
# opt-level = 0

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.

[dependencies]
# clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29", features = [
    "serde",
    "event-stream",
    "bracketed-paste",
] }
# directories = "6.0.0"
# env_logger = "0.11.8"
# lazy_static = "1.5.0"
log = "0.4.29"
# directories = "6.0.0"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
ratatui = { version = "0.30.0-alpha", features = ["unstable-widget-ref"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
# tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
# serde = { version = "1.0.228", features = ["derive"] }
# serde_derive = "1.0.228"
# toml = "0.9.10"
time = { version = "0.3", features = ["macros", "local-offset", "formatting"] }
# sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread","tracing"] }
dashmap = "6.1.0"
console-subscriber = "0.5.0"

[dev-dependencies]
env_logger = "0.11.8"

