[package]
name = "ef"
version = "0.1.0"
description = "A simple way to sort your file items."
edition = "2024"

[profile.dev]
split-debuginfo = "unpacked"

[profile.release]
codegen-units = 1 # Allows compiler to perform better optimization.
lto = true        # Enables Link-time Optimization.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
strip = true      # Ensures debug symbols are removed.

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29", features = [
    "serde",
    "event-stream",
    "bracketed-paste",
] }
directories = "6.0.0"
log = "0.4.29"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
ratatui = { version = "0.30.0-alpha", features = ["unstable-widget-ref"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
toml = "0.9.10"
# time = { version = "0.3", features = ["macros", "local-offset", "formatting"] }
# sysinfo = "0.37.2"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "tracing"] }
dashmap = "6.1.0"
console-subscriber = "0.5.0"
tempfile = "3.24.0"
trash = "5.2.5"
human-panic = "2.0.5"
# dunce = "1.0.5"
walkdir = "2.5.0"
ignore = "0.4.25"
etcetera = "0.11.0"
regex = "1.12.2"
heck = "0.5.0"

